--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather",
-  "homepage": "https://susanact99.github.io/Weather-app",
+  "homepage": "https://susanact99.github.io/Weather-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
