--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "framer-motion": "^11.3.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
